# internship

./: .gitignore  Makefile  README.md  Summary.md  pyproject.toml
Docker/: Dockerfile
config/: config.yml
data/: README.md
models/: __init__.py
papers/: seqot.md
papers/Image_place_recognition/: Patch-NetVLAD.md  multi_domain_feature_learning_method.md
papers/LIDAR_place_recognition/: casspr.md  seqot.md
papers/related_papers/: Interesting_papers.md  LIDAR_PR.md  Transformers.md  global_descriptors.md  transformer_summary.md
src/: eval.py  gen_depth_data.py  gen_sub_descriptors.py  main.py  predict.py  query.py  read_log.py  utils.py  visualuize_trajectory.py
src/config/: config.yml
src/models/: netvlad.py  seqTransformerCat.py
src/ros_utils/: _PointCloud2.py
src/utils/: constants.py  data.py  pose.py  read_data.py  vis_utils.py
to_test/: README.md
