[tool.poetry]
name = "internship"
version = "0.1.0"
description = ""
authors = ["Gizzatovamir <gizzatovamir777@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8.2"
torch = "^2.2.0"
torchaudio = "^2.2.0"
numpy = "1.23.2"
matplotlib = "3.4.3"
faiss-cpu = "^1.7.4"
pyyaml = "^6.0.1"
plotly = "^5.18.0"
open3d = "^0.18.0"
wheel = "^0.42.0"
scikit-learn = "0.24.2"
addict = "^2.4.0"
pandas = "1.5.3"
tqdm = "^4.66.1"
rosbags = "0.9.19"
pyquaternion = "^0.9.9"
gtsam = "^4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
